Bug 1721305 [wpt PR 29714] - AppHistoryNavigateEvent.navigationType, AppHistoryDestination.key, and AppHistoryDestination.id, a=testonly
Automatic update from web-platform-tests
AppHistoryNavigateEvent.navigationType, AppHistoryDestination.key, and AppHistoryDestination.id

navigationType is set to one of ("push", "replace", "reload", "traverse"), and
is derived from the WebFrameLoadType of the navigation.

key and id are set on AppHistoryDestination only in the "traverse" case,
because that is the only case where the key and id are known at the time
of the navigate event.

Bug: 1183545
Change-Id: I772418351931c3a74a45410001b51ea737da61a8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3040051
Auto-Submit: Nate Chapin <japhetchromium.org>
Commit-Queue: Domenic Denicola <domenicchromium.org>
Reviewed-by: Domenic Denicola <domenicchromium.org>
Cr-Commit-Position: refs/heads/master{#904539}

--

wpt-commits: 6dd52418972ac71bc97e962d1b4833c1ac01047f
wpt-pr: 29714

UltraBlame original commit: 1db9d1463cd80745a7e897be2daf96702a285dc4

--- a/testing/web-platform/tests/app-history/navigate-event/navigate-appHistory-back-cross-document.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-appHistory-back-cross-document.html
@@ -81,6 +81,32 @@ step_func
 =
 >
 {
+let
+target_key
+=
+i
+.
+contentWindow
+.
+appHistory
+.
+current
+.
+key
+;
+let
+target_id
+=
+i
+.
+contentWindow
+.
+appHistory
+.
+current
+.
+id
+;
 i
 .
 contentWindow
@@ -124,6 +150,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+traverse
+"
+)
+;
 assert_true
 (
 e
@@ -182,6 +218,36 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+target_key
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+target_id
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+0
 )
 ;
 assert_equals
