--- a/testing/web-platform/tests/app-history/navigate-event/navigate-appHistory-navigate.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-appHistory-navigate.html
@@ -58,6 +58,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+replace
+"
+)
+;
 assert_true
 (
 e
@@ -112,6 +122,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 assert_equals
