--- a/testing/web-platform/tests/app-history/navigate-event/navigate-destination-getState-navigate.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-destination-getState-navigate.html
@@ -110,6 +110,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+push
+"
+)
+;
 assert_not_equals
 (
 e
@@ -162,6 +172,37 @@ destination
 getState
 (
 )
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 }
