--- a/testing/web-platform/tests/app-history/navigate-event/navigate-form-with-target.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-form-with-target.html
@@ -162,6 +162,16 @@ preventDefault
 (
 )
 ;
+assert_equals
+(
+e
+.
+navigationType
+"
+push
+"
+)
+;
 assert_true
 (
 e
@@ -226,6 +236,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 assert_not_equals
