--- a/testing/web-platform/tests/app-history/navigate-event/navigate-anchor-fragment.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-anchor-fragment.html
@@ -76,6 +76,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+push
+"
+)
+;
 assert_true
 (
 e
@@ -138,6 +148,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 e
