--- a/testing/web-platform/tests/app-history/navigate-event/navigate-anchor-same-origin-cross-document.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-anchor-same-origin-cross-document.html
@@ -77,6 +77,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+push
+"
+)
+;
 assert_true
 (
 e
@@ -149,6 +159,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 e
