--- a/testing/web-platform/tests/app-history/navigate-event/navigate-anchor-userInitiated.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-anchor-userInitiated.html
@@ -133,6 +133,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+push
+"
+)
+;
 assert_true
 (
 e
@@ -195,6 +205,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 e
