--- a/testing/web-platform/tests/app-history/navigate-event/navigate-anchor-with-target.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-anchor-with-target.html
@@ -156,6 +156,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+push
+"
+)
+;
 assert_true
 (
 e
@@ -228,6 +238,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 e
