--- a/testing/web-platform/tests/app-history/navigate-event/navigate-appHistory-back-same-document.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-appHistory-back-same-document.html
@@ -87,6 +87,24 @@ step_timeout
 =
 >
 {
+let
+target_key
+=
+appHistory
+.
+current
+.
+key
+;
+let
+target_id
+=
+appHistory
+.
+current
+.
+id
+;
 appHistory
 .
 navigate
@@ -116,6 +134,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+traverse
+"
+)
+;
 assert_true
 (
 e
@@ -168,6 +196,36 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+target_key
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+target_id
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+0
 )
 ;
 assert_equals
