--- a/testing/web-platform/tests/app-history/navigate-event/navigate-destination-getState-back-forward.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-destination-getState-back-forward.html
@@ -120,6 +120,24 @@ navState
 }
 )
 ;
+let
+target_key
+=
+appHistory
+.
+current
+.
+key
+;
+let
+target_id
+=
+appHistory
+.
+current
+.
+id
+;
 appHistory
 .
 navigate
@@ -142,6 +160,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+traverse
+"
+)
+;
 assert_not_equals
 (
 e
@@ -178,6 +206,37 @@ destination
 getState
 (
 )
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 }
