--- a/testing/web-platform/tests/app-history/navigate-event/navigate-form-userInitiated.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-form-userInitiated.html
@@ -147,6 +147,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+push
+"
+)
+;
 assert_true
 (
 e
@@ -198,6 +208,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 assert_not_equals
