--- a/testing/web-platform/tests/app-history/navigate-event/navigate-history-back-after-pushState.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-history-back-after-pushState.html
@@ -66,6 +66,24 @@ history
 .
 length
 ;
+let
+target_key
+=
+appHistory
+.
+current
+.
+key
+;
+let
+target_id
+=
+appHistory
+.
+current
+.
+id
+;
 history
 .
 pushState
@@ -102,6 +120,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+traverse
+"
+)
+;
 assert_true
 (
 e
@@ -154,6 +182,36 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+target_key
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+target_id
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+0
 )
 ;
 assert_equals
