--- a/testing/web-platform/tests/app-history/navigate-event/navigate-history-go-0.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-history-go-0.html
@@ -97,6 +97,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+reload
+"
+)
+;
 assert_true
 (
 e
@@ -155,6 +165,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 assert_equals
