--- a/testing/web-platform/tests/app-history/navigate-event/navigate-history-replaceState.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-history-replaceState.html
@@ -65,6 +65,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+replace
+"
+)
+;
 assert_true
 (
 e
@@ -119,6 +129,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 assert_equals
