--- a/testing/web-platform/tests/app-history/navigate-event/navigate-iframe-location.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-iframe-location.html
@@ -127,6 +127,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+push
+"
+)
+;
 assert_true
 (
 e
@@ -181,6 +191,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 assert_equals
