--- a/testing/web-platform/tests/app-history/navigate-event/navigate-location.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-location.html
@@ -74,6 +74,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+replace
+"
+)
+;
 assert_true
 (
 e
@@ -128,6 +138,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 assert_equals
