--- a/testing/web-platform/tests/app-history/navigate-event/navigate-meta-refresh.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-meta-refresh.html
@@ -105,6 +105,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+reload
+"
+)
+;
 assert_true
 (
 e
@@ -156,6 +166,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 assert_equals
