--- a/testing/web-platform/tests/app-history/navigate-event/navigate-window-open.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-window-open.html
@@ -132,6 +132,16 @@ e
 =
 >
 {
+assert_equals
+(
+e
+.
+navigationType
+"
+push
+"
+)
+;
 assert_true
 (
 e
@@ -186,6 +196,37 @@ e
 destination
 .
 sameDocument
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+key
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+id
+null
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+index
+-
+1
 )
 ;
 assert_equals
