Bug 1721883 [wpt PR 29753] - Raw Clipboard: Final pass to remove code., a=testonly
Automatic update from web-platform-tests
Raw Clipboard: Final pass to remove code.

Raw Clipboard is deprecated and being removed.

Bug: 1217643
Change-Id: I504e74c791f3dcf6ad52f1ee370be791f26f952f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3044530
Reviewed-by: enne <ennechromium.org>
Reviewed-by: Austin Sullivan <asullychromium.org>
Reviewed-by: Marijn Kruisselbrink <mekchromium.org>
Commit-Queue: Darwin Huang <huangdarwinchromium.org>
Cr-Commit-Position: refs/heads/master{#904675}

--

wpt-commits: af64b9c8e9255b84715361f18f8b477fc9a84a68
wpt-pr: 29753

UltraBlame original commit: 44e81e75674e54c1e4c0e4ac8e06bacfe3514e27

--- a/testing/web-platform/tests/clipboard-apis/async-custom-formats-write-read.tentative.https.html
+++ b/testing/web-platform/tests/clipboard-apis/async-custom-formats-write-read.tentative.https.html
@@ -18,15 +18,15 @@ title
 >
 Async
 Clipboard
-raw
-platform
--
-specific
+custom
 write
 -
 >
+Async
+Clipboard
+custom
 read
-tests
+test
 <
 /
 title
@@ -174,147 +174,6 @@ use
 strict
 '
 ;
-async
-function
-rawWriteBeforeTest
-(
-)
-{
-const
-format
-=
-'
-RawClipboardDisabledFormat
-'
-;
-const
-blob
-=
-new
-Blob
-(
-[
-'
-RawClipboardDisabled
-'
-]
-{
-type
-:
-format
-}
-)
-;
-const
-clipboardItem
-=
-new
-ClipboardItem
-(
-{
-[
-format
-]
-:
-blob
-}
-{
-raw
-:
-true
-}
-)
-;
-await
-waitForUserActivation
-(
-)
-;
-await
-navigator
-.
-clipboard
-.
-write
-(
-[
-clipboardItem
-]
-)
-;
-}
-function
-platformFormat
-(
-)
-{
-if
-(
-navigator
-.
-platform
-.
-includes
-(
-'
-Win
-'
-)
-)
-return
-'
-CF_TEXT
-'
-;
-if
-(
-navigator
-.
-platform
-.
-includes
-(
-'
-Linux
-'
-)
-)
-return
-'
-text
-/
-plain
-'
-;
-return
-'
-PlatformNeutralFormat
-'
-;
-}
-/
-/
-Writes
-a
-payload
-with
-platform
--
-specific
-content
-and
-checks
-to
-ensure
-the
-/
-/
-correct
-data
-was
-written
-successfully
-.
 promise_test
 (
 async
@@ -322,117 +181,86 @@ t
 =
 >
 {
-/
-/
-This
-extra
-raw
-write
-is
-used
-to
-create
-consistency
-in
-the
-error
-message
-/
-/
-when
-the
-RawClipboard
-flag
-isn
-'
-t
-enabled
-.
-/
-/
-TODO
-(
-https
-:
-/
-/
-crbug
-.
-com
-/
-897289
-)
-:
-Remove
-this
-after
-RawClipboard
-is
-enabled
-/
-/
-by
-default
-.
-await
-rawWriteBeforeTest
-(
-)
-;
 const
-dataToWrite
+format1
 =
 '
-Test
-text
-.
-'
-;
-const
+application
+/
+x
+-
+custom
+-
 format
-=
-platformFormat
-(
-)
+-
+clipboard
+-
+test
+-
+format
+-
+1
+'
 ;
 const
-blobInput
+format2
+=
+'
+application
+/
+x
+-
+custom
+-
+format
+-
+clipboard
+-
+test
+-
+format
+-
+2
+'
+;
+const
+blobInput1
 =
 new
 Blob
 (
 [
-dataToWrite
+'
+input
+data
+1
+'
 ]
 {
 type
 :
-format
+format1
 }
 )
 ;
-/
-/
+const
+blobInput2
+=
+new
 Blob
-types
-are
-automatically
-converted
-to
-lower
--
-case
-.
-assert_equals
 (
-blobInput
-.
+[
+'
+input
+data
+2
+'
+]
+{
 type
-format
-.
-toLowerCase
-(
-)
+:
+format2
+}
 )
 ;
 const
@@ -443,15 +271,23 @@ ClipboardItem
 (
 {
 [
-format
+format1
 ]
 :
-blobInput
+blobInput1
+[
+format2
+]
+:
+blobInput2
 }
 {
-raw
+unsanitized
 :
-true
+[
+format1
+format2
+]
 }
 )
 ;
@@ -475,15 +311,53 @@ clipboardItemInput
 /
 /
 Items
+may
+not
+be
+readable
+on
+the
+sanitized
+clipboard
+after
+custom
+format
+/
+/
+write
+.
+await
+promise_rejects_dom
+(
+t
+'
+DataError
+'
+navigator
+.
+clipboard
+.
+read
+(
+)
+)
+;
+/
+/
+Items
 should
 be
 readable
 on
 a
-raw
+custom
+format
 clipboard
 after
-raw
+custom
+format
+/
+/
 write
 .
 await
@@ -502,9 +376,12 @@ clipboard
 read
 (
 {
-raw
+unsanitized
 :
-true
+[
+format1
+format2
+]
 }
 )
 ;
@@ -531,34 +408,58 @@ instanceof
 ClipboardItem
 )
 ;
+/
+/
+This
+test
+can
+'
+t
+verify
+clipboardItem
+.
+types
+because
+its
+size
+and
+values
+/
+/
+are
+both
+platform
+-
+dependent
+.
 const
-blobOutput
+blobOutput1
 =
 await
 clipboardItem
 .
 getType
 (
-format
+format1
 )
 ;
 assert_equals
 (
-blobOutput
+blobOutput1
 .
 type
-format
+format1
 )
 ;
 const
-data
+data1
 =
 await
 (
 new
 Response
 (
-blobOutput
+blobOutput1
 )
 )
 .
@@ -568,57 +469,57 @@ text
 ;
 assert_equals
 (
+data1
+'
+input
 data
-dataToWrite
-)
-;
-if
-(
-format
-=
-=
-=
-'
-PlatformNeutralFormat
+1
 '
 )
-return
 ;
-/
-/
-These
-examples
-use
-native
-text
-formats
-so
-these
-formats
-should
-be
-/
-/
-accessible
-as
-text
-.
 const
-textOutput
+blobOutput2
 =
 await
-navigator
+clipboardItem
 .
-clipboard
+getType
+(
+format2
+)
+;
+assert_equals
+(
+blobOutput2
 .
-readText
+type
+format2
+)
+;
+const
+data2
+=
+await
+(
+new
+Response
+(
+blobOutput2
+)
+)
+.
+text
 (
 )
 ;
 assert_equals
 (
-textOutput
-dataToWrite
+data2
+'
+input
+data
+2
+'
 )
 ;
 }
@@ -629,11 +530,13 @@ and
 read
 clipboard
 given
+2
 platform
 -
-specific
-raw
-input
+neutral
+custom
+format
+inputs
 '
 )
 ;
