Backed out changeset c7a8038bc730 (bug 1721651) for causing Xpcshell failures at test_bookmarks_html.js. CLOSED TREE
UltraBlame original commit: 0c6ed183354aad2c65c23a4366e31227e8e6d9ac

--- a/browser/base/content/certerror/aboutNetError.xhtml
+++ b/browser/base/content/certerror/aboutNetError.xhtml
@@ -284,6 +284,41 @@ all
 /
 >
 <
+!
+-
+-
+If
+the
+location
+of
+the
+favicon
+is
+changed
+here
+the
+FAVICON_ERRORPAGE_URL
+symbol
+in
+toolkit
+/
+components
+/
+places
+/
+src
+/
+nsFaviconService
+.
+h
+should
+be
+updated
+.
+-
+-
+>
+<
 link
 rel
 =
@@ -294,6 +329,23 @@ id
 =
 "
 favicon
+"
+href
+=
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+info
+.
+svg
 "
 /
 >
