Bug 1720294 - Part 3: Flip off 'network.http.referer.disallowCrossSiteRelaxingDefault' for tests. r=ckerschb
Differential Revision: https://phabricator.services.mozilla.com/D119973

UltraBlame original commit: 39bf9fa637353faa0f98b4899005ecbd9778141a

--- a/dom/base/test/test_change_policy.html
+++ b/dom/base/test/test_change_policy.html
@@ -651,6 +651,32 @@ test
 "
 ;
 yield
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+network
+.
+http
+.
+referer
+.
+disallowCrossSiteRelaxingDefault
+"
+false
+]
+]
+}
+advance
+)
+;
+yield
 resetState
 (
 )
