--- a/dom/security/test/referrer-policy/test_img_referrer.html
+++ b/dom/security/test/referrer-policy/test_img_referrer.html
@@ -660,6 +660,32 @@ function
 (
 )
 {
+yield
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+network
+.
+http
+.
+referer
+.
+disallowCrossSiteRelaxingDefault
+"
+false
+]
+]
+}
+advance
+)
+;
 var
 iframe
 =
