Bug 1721964 [wpt PR 29760] - [Anonymous iframe] Improve test for popup opener., a=testonly
Automatic update from web-platform-tests
[Anonymous iframe] Improve test for popup opener.

Bug: 1229998
Change-Id: Id4f6ba4f0323f3113d9147720c8ee0dc5b991576
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3045419
Reviewed-by: Antonio Sartori <antoniosartorichromium.org>
Commit-Queue: Yifan Luo <lyfchromium.org>
Cr-Commit-Position: refs/heads/master{#904699}

--

wpt-commits: 170bac1ef9ebb6c336d45cb422bfa42422461ee7
wpt-pr: 29760

UltraBlame original commit: 092b8fb385f879d4b258a5329cccbc1b016765fa

--- a/testing/web-platform/tests/html/cross-origin-embedder-policy/anonymous-iframe/anonymous-iframe-popup.tentative.https.html
+++ b/testing/web-platform/tests/html/cross-origin-embedder-policy/anonymous-iframe/anonymous-iframe-popup.tentative.https.html
@@ -93,15 +93,8 @@ get_host_info
 (
 )
 ;
-/
-/
-Create
-an
-anonymous
-iframe
-.
 const
-normal_iframe
+control_iframe
 =
 document
 .
@@ -131,7 +124,9 @@ t
 =
 >
 {
-await
+const
+createControlIframe
+=
 new
 Promise
 (
@@ -140,19 +135,13 @@ resolve
 =
 >
 {
-normal_iframe
+control_iframe
 .
 onload
 =
-(
-)
-=
->
 resolve
-(
-)
 ;
-normal_iframe
+control_iframe
 .
 src
 =
@@ -171,13 +160,15 @@ body
 .
 append
 (
-normal_iframe
+control_iframe
 )
 ;
 }
 )
 ;
-await
+const
+createAnonymousIframe
+=
 new
 Promise
 (
@@ -190,13 +181,7 @@ anonymous_iframe
 .
 onload
 =
-(
-)
-=
->
 resolve
-(
-)
 ;
 anonymous_iframe
 .
@@ -227,6 +212,17 @@ anonymous_iframe
 )
 ;
 }
+)
+;
+await
+Promise
+.
+all
+(
+[
+createControlIframe
+createAnonymousIframe
+]
 )
 ;
 }
@@ -276,20 +272,10 @@ blank
 .
 html
 ;
-/
-/
-Opener
-from
-normal
-iframe
-should
-be
-available
-.
 const
 popup_1
 =
-normal_iframe
+control_iframe
 .
 contentWindow
 .
@@ -303,21 +289,21 @@ assert_equals
 popup_1
 .
 opener
-normal_iframe
+control_iframe
 .
 contentWindow
-)
-;
-/
-/
+"
 Opener
 from
 normal
 iframe
 should
 be
-blocked
+available
 .
+"
+)
+;
 const
 popup_2
 =
@@ -334,6 +320,16 @@ assert_equals
 (
 popup_2
 null
+"
+Opener
+from
+anonymous
+iframe
+should
+be
+blocked
+.
+"
 )
 ;
 }
@@ -343,8 +339,11 @@ Cross
 origin
 popup
 from
+normal
+/
 anonymous
-iframe
+iframes
+.
 '
 )
 ;
@@ -393,20 +392,10 @@ blank
 .
 html
 ;
-/
-/
-Opener
-from
-normal
-iframe
-should
-be
-available
-.
 const
 popup_1
 =
-normal_iframe
+control_iframe
 .
 contentWindow
 .
@@ -420,21 +409,21 @@ assert_equals
 popup_1
 .
 opener
-normal_iframe
+control_iframe
 .
 contentWindow
-)
-;
-/
-/
+"
 Opener
 from
 normal
 iframe
 should
 be
-blocked
+available
 .
+"
+)
+;
 const
 popup_2
 =
@@ -451,6 +440,16 @@ assert_equals
 (
 popup_2
 null
+"
+Opener
+from
+anonymous
+iframe
+should
+be
+blocked
+.
+"
 )
 ;
 }
@@ -460,8 +459,11 @@ Same
 origin
 popup
 from
+normal
+/
 anonymous
-iframe
+iframes
+.
 '
 )
 ;
