Bug 1713097 [wpt PR 29134] - [mathml] Add basic support tabular elements, a=testonly
Automatic update from web-platform-tests
[mathml] Add basic support tabular elements

This adds some basic CSS rules for <mtable>, <mtr> and <mtd>.

Apart from that it also includes a small change
in NGTableLayoutAlgorithm::GenerateFragment() in order to
vertically align the <mtable> with the math axis:
https://w3c.github.io/mathml-core/#table-or-matrix-mtable

This change adds a new test table-003, that doesn't pass right now.
The problem is that the <mtd> is not horizontally centering its contents.

Bug: 6606, 1125111
Test: external/wpt/mathml/presentation-markup/tables/table-001.html
Test: external/wpt/mathml/presentation-markup/tables/table-002.html
Test: external/wpt/mathml/presentation-markup/tables/table-003.html
Change-Id: I536f1e8344baf1ed4de431f2da00aa55dbe3aa6e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2390636
Reviewed-by: Aleks Totic <atoticchromium.org>
Reviewed-by: Frédéric Wang <fwangigalia.com>
Commit-Queue: Frédéric Wang <fwangigalia.com>
Cr-Commit-Position: refs/heads/master{#904702}

--

wpt-commits: b4a141c2fdf912dad004804c0994377eb301a8a8
wpt-pr: 29134

UltraBlame original commit: 6659287aca60e34735a726bb2a421a0be85d46eb

--- a/testing/web-platform/tests/mathml/presentation-markup/tables/table-003.html
+++ b/testing/web-platform/tests/mathml/presentation-markup/tables/table-003.html
@@ -78,7 +78,7 @@ alignment
 of
 cells
 with
-inline
+block
 elements
 in
 basic
@@ -270,6 +270,8 @@ i
 .
 firstElementChild
 .
+firstElementChild
+.
 getBoundingClientRect
 (
 )
@@ -283,6 +285,8 @@ i
 +
 1
 ]
+.
+firstElementChild
 .
 firstElementChild
 .
@@ -413,6 +417,8 @@ firstElementChild
 .
 firstElementChild
 .
+firstElementChild
+.
 getBoundingClientRect
 (
 )
@@ -426,6 +432,8 @@ j
 +
 1
 ]
+.
+firstElementChild
 .
 firstElementChild
 .
@@ -535,6 +543,9 @@ mtr
 mtd
 >
 <
+mrow
+>
+<
 mspace
 width
 =
@@ -566,10 +577,17 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -603,10 +621,17 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -640,10 +665,17 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -677,10 +709,17 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -714,10 +753,17 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -751,10 +797,17 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -788,10 +841,17 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -825,10 +885,17 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -862,10 +929,17 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -896,6 +970,10 @@ black
 <
 /
 mspace
+>
+<
+/
+mrow
 >
 <
 /
@@ -938,6 +1016,9 @@ mtr
 mtd
 >
 <
+mrow
+>
+<
 mspace
 width
 =
@@ -964,6 +1045,10 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
@@ -975,6 +1060,9 @@ mtr
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -1003,6 +1091,10 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
@@ -1014,6 +1106,9 @@ mtr
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -1042,6 +1137,10 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
@@ -1053,6 +1152,9 @@ mtr
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -1081,6 +1183,10 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
@@ -1092,6 +1198,9 @@ mtr
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -1120,6 +1229,10 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
@@ -1131,6 +1244,9 @@ mtr
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -1159,6 +1275,10 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
@@ -1170,6 +1290,9 @@ mtr
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -1198,6 +1321,10 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
@@ -1209,6 +1336,9 @@ mtr
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -1237,6 +1367,10 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
@@ -1248,6 +1382,9 @@ mtr
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -1276,6 +1413,10 @@ mspace
 >
 <
 /
+mrow
+>
+<
+/
 mtd
 >
 <
@@ -1287,6 +1428,9 @@ mtr
 >
 <
 mtd
+>
+<
+mrow
 >
 <
 mspace
@@ -1312,6 +1456,10 @@ black
 <
 /
 mspace
+>
+<
+/
+mrow
 >
 <
 /
