Bug 1722064 [wpt PR 29767] - WebKit export of https://bugs.webkit.org/show_bug.cgi?id=225997, a=testonly
Automatic update from web-platform-tests
WebKit export of https://bugs.webkit.org/show_bug.cgi?id=225997 (#29767)

--

wpt-commits: abea83b103594bef64a8627a3873a5e9b5e5ce65
wpt-pr: 29767

UltraBlame original commit: 3a45dc98322c17368168d4d28c2022f34b585a3e

--- a/testing/web-platform/tests/webrtc-encoded-transform/sframe-transform-readable.html
+++ b/testing/web-platform/tests/webrtc-encoded-transform/sframe-transform-readable.html
@@ -90,6 +90,15 @@ test
 >
 {
 const
+frameDOMException
+=
+frame
+.
+contentWindow
+.
+DOMException
+;
+const
 transform
 =
 new
@@ -110,6 +119,7 @@ assert_throws_dom
 "
 InvalidStateError
 "
+frameDOMException
 (
 )
 =
